src/index.less
body {
    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
    margin: 0px;
}
a {
    color: #757575;
    text-decoration: none;
}
a:hover {
    color: #cccccc;
}
p {
    margin: 0px;
    padding: 0px;
}
pre {
    margin-top: 8px;
    margin-bottom: 0px;
    border-top: #cccccc;
    border-top-width: 1px;
    border-top-style: solid;
}
h1 {
    font-size: 1.8em;
    font-weight: bold;
    margin: 0px;
}
h2 {
    font-size: 1.5em;
    font-weight: bold;
}
h3 {
    margin-bottom: 10px;
    -webkit-margin-before: 1.5em;
}
h4, ul {
    margin-top: 8px;
    margin-bottom: 0px;
}
canvas {
    width: 100%;
    max-height: 70vh;
}
iframe {
    border-width: 0px;
    width: 100%;
}
ul {
    -webkit-padding-start: 20px;
}
li {
    list-style-type: none;
}
#details {
    margin-left: 8px;
    margin-right: 8px;
    margin-bottom: 40px;
    p {
        margin-left: 8px;
    }
}
#app, #about {
    height: 100vh;
    width: 100vw;
    display: flex;
    flex-direction: column;
    align-items: stretch;
}
#header {
    margin: 8px;
    padding: 0px;
    font-size: 1em;
}
#navigation {
    position: absolute;
    right: 8px;
}
#header, #footer {
    flex-grow: 0;
}
#body {
    flex-grow: 2;
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    overflow: auto;
    border-top: #cccccc;
    border-top-width: 1px;
    border-top-style: solid;
    border-bottom: #cccccc;
    border-bottom-width: 1px;
    border-bottom-style: solid;
}
#github {
    margin-left: 8px;
}
#name {
    font-size: 1.6em;
    font-weight: bold;
    margin: 0px;
}
#footer {
    margin: 8px;
    padding: 0px;
    bottom: 0px;
}
.statement {
    flex: 1;
    display: flex;
}
.source {
    padding-top: 8px;
}
.work {
    flex: 1 100%;
    display: flex;
    flex-direction: column;
    justify-content: center;
}
.title {
    font-weight: bold;
}
.hljs {
    padding: 0.5em 0.5em 1.5em 0.5em;
}

